fix: align top container elements of girl_rps.html

--- a/css/girl_rps.css
+++ b/css/girl_rps.css
@@ -37,8 +37,15 @@
     width: 100%;
     justify-content: center;
     font-size: 24px;
-    gap: 35%;
+    gap: 34%;
     margin: 24px;
+}
+
+.round {
+    display: flex;
+    flex-direction: row;
+    font-size: 32px;
+    align-self: center;
 }
 
 .mid-container {
